fix spacing

--- a/styles.css
+++ b/styles.css
@@ -5,16 +5,21 @@ body {
   background-image: url("images/pattern-background-mobile.svg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 85vh;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 15px;
   text-align: center;
+  position: relative;
 }
 
 .container {
   width: 327px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background-color: #fff;
   border-radius: 20px;
   box-shadow: 0px 40px 40px -20px rgba(13, 48, 189, 0.151826);
